# NBA-Predictions

./: Cargo.toml  README.md
data/: config.json
data/json_data/: for_preprocessing_test_output.json  test_output.json
data/processed_data/json_data/: game_matchups.json
data/raw_data/json_data/: injury_report.json
data/raw_data/json_data/player_stats/injury_report/2023_24/: players_injury_report_2023_24.json
data/raw_data/json_data/team_stats/opponent_shooting_general/per_game/2023_24/: opponent_shooting_general_per_game_2023_24.json
data/raw_data/json_data/team_stats/teams_general_advanced/per_game/2023_24/: teams_general_advanced_per_game_2023_24.json
data/round_1_data/json_data/player_stats/injury_report/2023_24/: players_injury_report_2023_24.json
data/round_1_data/json_data/player_stats/injury_report/2024_25/: players_injury_report_2024_25.json
data/round_1_data/json_data/player_stats/players_general/per_game/2023_24/: players_general_per_game_2023_24.json
data/round_1_data/json_data/player_stats/players_general/per_game/2024_25/: players_general_per_game_2024_25.json
data/round_1_data/json_data/team_stats/opponent_shooting_general/per_game/2023_24/: opponent_shooting_general_per_game_2023_24.json
data/round_1_data/json_data/team_stats/opponent_shooting_general/per_game/2024_25/: opponent_shooting_general_per_game_2024_25.json
data/round_1_data/json_data/team_stats/teams_general_advanced/per_game/2023_24/: teams_general_advanced_per_game_2023_24.json
data/round_1_data/json_data/team_stats/teams_general_advanced/per_game/2024_25/: teams_general_advanced_per_game_2024_25.json
data/round_1_data/json_data/team_stats/teams_general_opponent/per_game/2023_24/: teams_general_opponent_per_game_2023_24.json
data/round_1_data/json_data/team_stats/teams_general_opponent/per_game/2024_25/: teams_general_opponent_per_game_2024_25.json
data/round_2_data/json_data/player_stats/injury_report/2023_24/: players_injury_report_2023_24.json
data/round_2_data/json_data/player_stats/injury_report/2024_25/: players_injury_report_2024_25.json
data/round_2_data/json_data/player_stats/players_general/per_game/2023_24/: players_general_per_game_2023_24.json
data/round_3_data/json_data/player_stats/injury_report/2023_24/: players_injury_report_2023_24.json
data/round_3_data/json_data/player_stats/injury_report/2024_25/: players_injury_report_2024_25.json
data/round_4_data/json_data/player_stats/injury_report/2023_24/: players_injury_report_2023_24.json
data/round_4_data/json_data/player_stats/injury_report/2024_25/: players_injury_report_2024_25.json
data_fetching/: Cargo.toml
data_fetching/src/: decompressed_json_reader.rs  error.rs  fetch_endpoint_response.rs  game_log_json_data_into_data_frame.rs  lib.rs  main.rs
data_fetching/src/response_data_extractors/: mod.rs  nba_api_result_sets_extractor.rs
data_fetching/src/utils/: construct_api_endpoints.rs  fetch_request.rs  mod.rs  process_bytes.rs  read_write_from_file_tools.rs  req_headers.rs  string_json.rs
data_preprocessing/: Cargo.toml
data_preprocessing/src/: error.rs  main.rs  matchups_dataframe.rs  round_2_processing.rs  round_3_processing.rs  round_4_processing.rs  round_5_processing.rs
data_preprocessing/src/response_data_extractors/: nba_api_result_sets_extractor.rs  rotowire_series_extractor.rs
prediction_engine/: Cargo.toml
prediction_engine/src/: main.rs
read-write/: Cargo.toml
read-write/src/: config_reader.rs  lib.rs
tests/: Cargo.toml  decompress_bytes_to_store_as_json_test.rs  fetch_headers_endpoints_test.rs  fetch_response_with_headers_test.rs  read_stored_bytes_and_convert_to_string_test.rs  tests_p_fetching.rs  tests_p_players_round_5_data_dataframe.rs  tests_p_prediction_engine_working_roster.rs  tests_p_process_dataframe.rs  tests_p_round_2_data_dataframe.rs  tests_p_round_4_data_dataframe.rs  wrangle_json_data_test.rs
tests/support/: utils.rs
(+27 files in other folders)
