[package]
name = "data_fetching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read-write = { path = "../read-write"}
reqwest = { version = "0.12.5", features = ["json"] }
bytes = "1.6.1"
tokio = { version = "1.39.1", features = ["full"] }
derive_more = "0.99.18"
serde_json = "1.0.120"
serde = "1.0.207"
flate2 = "1.0.30"
polars = { version = "^0.41.3", features = ["polars-io","json","lazy"] }