[package]
name = "data_preprocessing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read-write = { path = "../read-write"}
polars = { version = "^0.41.3", features = ["polars-io","json","lazy"] }
derive_more = "0.99.18"
serde_json = "1.0.120"
serde = "1.0.207"