[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
data_fetching = { path = "../data_fetching"}
tokio = { version = "1.39.1", features = ["full"] }
serde_json = "1.0.120"



[[test]]
name = "fetch_response_with_headers_test"
path = "fetch_response_with_headers_test.rs"

[[test]]
name = "read_stored_bytes_and_convert_to_string_test"
path = "read_stored_bytes_and_convert_to_string_test.rs"

[[test]]
name = "decompress_bytes_to_store_as_json_test"
path = "decompress_bytes_to_store_as_json_test.rs"

[[test]]
name = "wrangle_json_data_test"
path = "wrangle_json_data_test.rs"