[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
data_fetching = { path = "../data_fetching"}
read-write = { path = "../read-write"}
tokio = { version = "1.39.1", features = ["full"] }
serde_json = "1.0.120"
serde = "1.0.207"
flate2 = "1.0.30"
polars = { version = "^0.41.3", features = ["polars-io","json","lazy","dtype-struct","round_series"] }
rand = "0.8.5"
probability = "0.20.3"


[[test]]
name = "wrangle_json_data_test"
path = "wrangle_json_data_test.rs"

[[test]]
name = "tests_p_process_dataframe"
path = "tests_p_process_dataframe.rs"

[[test]]
name = "tests_p_round_2_data_dataframe"
path = "tests_p_round_2_data_dataframe.rs"

[[test]]
name = "tests_p_round_4_data_dataframe"
path = "tests_p_round_4_data_dataframe.rs"

[[test]]
name = "tests_p_players_round_5_data_dataframe"
path = "tests_p_players_round_5_data_dataframe.rs"

[[test]]
name = "tests_p_prediction_engine_working_roster"
path = "tests_p_prediction_engine_working_roster.rs"

[[test]]
name = "tests_p_fetching"
path = "tests_p_fetching.rs"